Fix page scrolling when touching minicolors panel on mobile

--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -45,6 +45,7 @@
   z-index: 99999;
   box-sizing: content-box;
   display: none;
+  touch-action: none;
 }
 
 .minicolors-panel.minicolors-visible {
